// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCircleToggle /> snapshot should match snapshot 1`] = `
<ButtonCircleToggle>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={true}
    onPress={[Function]}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with ghost being false 1`] = `
<ButtonCircleToggle
  ghost={false}
>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={false}
    onPress={[Function]}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with ghost being true 1`] = `
<ButtonCircleToggle
  ghost={true}
>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={true}
    onPress={[Function]}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with isSelected being false 1`] = `
<ButtonCircleToggle
  isSelected={false}
>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={true}
    isSelected={false}
    onPress={[Function]}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      isSelected={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with isSelected being true 1`] = `
<ButtonCircleToggle
  isSelected={true}
>
  <ButtonCircle
    aria-pressed={true}
    className="md-button-circle-toggle-wrapper"
    data-selected={true}
    disabled={false}
    ghost={true}
    isSelected={true}
    onPress={[Function]}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={true}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={true}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      isSelected={true}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={true}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={true}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with outline being false 1`] = `
<ButtonCircleToggle
  outline={false}
>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={true}
    onPress={[Function]}
    outline={false}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;

exports[`<ButtonCircleToggle /> snapshot should match snapshot with outline being true 1`] = `
<ButtonCircleToggle
  outline={true}
>
  <ButtonCircle
    aria-pressed={false}
    className="md-button-circle-toggle-wrapper"
    data-selected={false}
    disabled={false}
    ghost={true}
    onPress={[Function]}
    outline={true}
    size={40}
  >
    <ButtonSimple
      aria-disabled={false}
      aria-pressed={false}
      className="md-button-circle-wrapper md-button-circle-toggle-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-inverted={false}
      data-multiple-children={false}
      data-outline={true}
      data-selected={false}
      data-shallow-disabled={false}
      data-size={40}
      isDisabled={false}
      onPress={[Function]}
    >
      <FocusRing
        disabled={false}
      >
        <FocusRing
          disabled={false}
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-button-circle-toggle-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={true}
            data-inverted={false}
            data-multiple-children={false}
            data-outline={true}
            data-selected={false}
            data-shallow-disabled={false}
            data-size={40}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          />
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</ButtonCircleToggle>
`;
